--- a/app/index.css
+++ b/app/index.css
@@ -11,3 +11,13 @@
   margin: 5px 10px 5px 10px;
   border: solid;
 }
+
+.color_button {
+  background-color: red;
+  padding: 5px 10px 5px 10px;
+  border-radius: 20%;
+  border-width: 5px;
+  font-size: 2em;
+  font-weight: 700;
+  color: white;
+}
