--- a/app/index.css
+++ b/app/index.css
@@ -21,3 +21,19 @@
   font-weight: 700;
   color: white;
 }
+
+.first_form {
+  margin-top: 20px;
+}
+
+.textarea_first {
+  margin-left: 50px;
+  max-height: 300px;
+  max-width: 400px;
+  width: 300px;
+  height: 200px;
+}
+
+.moneyMan {
+  margin: 100px 0 100px 0;
+}
